working on Fedora support

--- a/wpkg.csproj
+++ b/wpkg.csproj
@@ -86,5 +86,11 @@
     <None Include="packages.config" />
     <None Include="README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SolidCP\Sources\SolidCP.Providers.Base\SolidCP.Providers.Base.csproj">
+      <Project>{22360f0a-a2a0-4f4c-9dd2-a523dfd519ad}</Project>
+      <Name>SolidCP.Providers.Base</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
