Changed SolidCP to FuseCP

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 **/Resources/*.pdb
 **/Resources/*.exe
 
-SolidCP\Sources\Tools\SCPTransportAgent\*.dll
+FuseCP\Sources\Tools\SCPTransportAgent\*.dll
 TestResults/
 **/[Bb]uild/
 **/[Dd]eploy/
@@ -63,17 +63,17 @@ bin/Release
 *.g.cs
 *.log
 
-/SolidCP/Sources/packages
-/SolidCP/msbuild.log
-/SolidCP/Sources/Tools/SCPTransportAgent/SCPTransportAgent.dll
-/SolidCP.Installer/Sources/packages/
-/SolidCP.Installer/Sources/Setup.WIXBootstrapper/SolidCP.msi
-/SolidCP.Installer/Sources/Setup.WIXBootstrapper/SolidCP.msi
-/SolidCP.Installer/Sources/SolidCP.Installer/[Uu]pdater.exe
-/SolidCP.Installer/Sources/SolidCP.UniversalInstaller/Resources/
-/SolidCP/SolidCP-Auto-Upgrade.ps1
-/SolidCP/Dev_CleanRelease.ps1
-/SolidCP/CleanRelease_Marc_Dev.ps1
-/SolidCP/CleanRelease_marc.ps1
-/SolidCP/CleanRelease2.ps1
-/SolidCP/CleanDebug.ps1
+/FuseCP/Sources/packages
+/FuseCP/msbuild.log
+/FuseCP/Sources/Tools/SCPTransportAgent/SCPTransportAgent.dll
+/FuseCP.Installer/Sources/packages/
+/FuseCP.Installer/Sources/Setup.WIXBootstrapper/FuseCP.msi
+/FuseCP.Installer/Sources/Setup.WIXBootstrapper/FuseCP.msi
+/FuseCP.Installer/Sources/FuseCP.Installer/[Uu]pdater.exe
+/FuseCP.Installer/Sources/FuseCP.UniversalInstaller/Resources/
+/FuseCP/FuseCP-Auto-Upgrade.ps1
+/FuseCP/Dev_CleanRelease.ps1
+/FuseCP/CleanRelease_Marc_Dev.ps1
+/FuseCP/CleanRelease_marc.ps1
+/FuseCP/CleanRelease2.ps1
+/FuseCP/CleanDebug.ps1
